--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ go_import_path: https://github.com/wl4g/kafka_offset_tool
 # This ensures that the local cache is filled before running the CI.
 # travis_retry retries the command 3 times if it fails as we've experienced
 # random issues on Travis.
-before_install:
-- travis_retry make deps
+#before_install:
+#- travis_retry make deps
 
 script:
 - make check_license style unused test lint check_assets
