--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,14 @@ before_install:
 #- travis_retry make deps
 - travis_retry make
 
+notifications:
+  email:
+    recipients:
+      - 983708408@qq.com
+      - 1154635107@qq.com
+    on_success: always # default: change
+    on_failure: always # default: change
+
 script:
 #- make check_license style unused test lint check_assets
 - git diff --exit-code
