refactor: rename & add default conf value

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,7 @@
             "mode": "auto",
             "program": "${fileDirname}/../pkg/",
             "env": {},
+            // "args": ["list-group"]
             "args": [""]
         }
     ]
