feat: add offset-calc

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,8 @@
             "mode": "auto",
             "program": "${fileDirname}/../pkg/",
             "env": {},
-            // "args": ["list-group"]
-            "args": [""]
+            // "args": ["get-offset", "--brokers", "10.0.0.163:9092", "--zkServers", "10.0.0.163:2181"]
+            "args": ["offset-calc", "--increment", "1000", "--inputFile", "/home/wanglsir/Downloads/offset.json", "--outputFile", "/home/wanglsir/Downloads/offset2.json"]
         }
     ]
 }
