--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,8 @@
             "program": "${fileDirname}/../pkg/",
             "env": {},
             // for testing
-            "args": ["get-topic", "--brokers", "10.0.0.163:9092", "--zkServers", "10.0.0.163:2181", "--filter", "*"]
-            // "args": ["get-offset", "--brokers", "10.0.0.163:9092", "--zkServers", "10.0.0.163:2181", "--groupFilter", "*"]
+            // "args": ["get-topic", "--brokers", "10.0.0.163:9092", "--zkServers", "10.0.0.163:2181", "--filter", "*"]
+            "args": ["get-offset", "--brokers", "10.0.0.163:9092", "--zkServers", "10.0.0.163:2181", "--groupFilter", "*", "--outputFile", "${env:HOME}/Downloads/offset2.json"]
             // "args": ["offset-calc", "--increment", "-1000", "--inputFile", "${env:HOME}/Downloads/offset.json", "--outputFile", "${env:HOME}/Downloads/offset2.json"]
         }
     ]
