--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
             "env": {},
             // for testing
             // "args": ["get-topic", "--brokers", "10.0.0.163:9092", "--zkServers", "10.0.0.163:2181", "--filter", "*"]
-            "args": ["get-offset", "--brokers", "10.0.0.163:9092", "--zkServers", "10.0.0.163:2181", "--groupFilter", "*", "--outputFile", "${env:HOME}/Downloads/offset2.json"]
+            "args": ["get-offset", "--brokers", "127.0.0.1:9092", "--zkServers", "127.0.0.1:2181", "--groupFilter", "repair1", "--topicFilter", "safeclound_ammeter"]
             // "args": ["offset-calc", "--increment", "-1000", "--inputFile", "${env:HOME}/Downloads/offset.json", "--outputFile", "${env:HOME}/Downloads/offset2.json"]
         }
     ]
